fix modals not showing over sidebar

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -3,7 +3,6 @@
 	height: 100%;
 	overflow: hidden;
 	position: relative;
-	z-index: var(--chakra-zIndices-fixed);
 }
 
 .userInfo {
